# trash-alarm

./: .gitignore  Cargo.toml  Dockerfile  RGB1602.py  alarm.py  callbacks.py  datetime_utils.py  docker-compose.yml  main.py  requirements.txt  trash-alarm.code-workspace
.cargo/: config.toml
.github/workflows/: ci_checks.yml
alarm/: Cargo.toml
alarm/src/: alarm_manager.rs  lib.rs
callback/src/: lib.rs
pico/: Cargo.toml
pico/app/: Cargo.toml
pico/app/src/: core_tasks.rs  globals.rs  interrupt.rs  main.rs
pico/callbacks/: Cargo.toml
pico/callbacks/src/: lib.rs
pico/datetime/: Cargo.toml
pico/datetime/src/: lib.rs
pico/lcd/: Cargo.toml
pico/lcd/src/: lib.rs
pico/led/: Cargo.toml
pico/led/src/: lib.rs
src/: alarm.rs  callbacks.rs  datetime.rs  lcd.rs  main.rs  task.rs
trash-alarm/: Cargo.toml
trash-alarm/src/: callbacks.rs  datetime.rs  globals.rs  lcd.rs  led.rs  main.rs
