[package]
name = "alarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.5.0"
arrayvec = { version = "0.7.2", features = [], default-features = false }
callback = { path = "../callback" }