[package]
name = "datetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
arrayvec = { version = "0.7.2", features = [], default-features = false }
rp-pico = "0.5"
lcd_1602_i2c = "0.3.0"
